Moved experiment nbs back to nbs dir

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -15,14 +15,32 @@
    "source": [
     "# Sciflow 🔬\n",
     "\n",
-    "> This library bridges the gap between research and production for Data Science. The exploration driven development is a different paradigm to most software engineering exercises. We start by assuming only that there are high levels of uncertainty and that the code needs not only to work but to be well conditioned to real data. `sciflow` mixes the strengths of the notebook environment: flexibility, access to data and constant feedback with the strengths of production-like workflows: resilience and dedicated compute."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "**This library bridges the gap between research and production for Data Science.** This library takes a different approach to achieve this than many others do.. the interactive notebook is the primary driver of exploration. Exploration driven development is a different paradigm to most software engineering exercises. `sciflow` mixes the strengths of the notebook environment: flexibility, access to data and constant feedback with the strengths of production-like workflows: resilience and dedicated compute.\n",
+    "\n",
+    "A popular approach to productionising research code in notebooks is to lift the workflow from notebooks to a python modules via a manual rewrite process. Sometimes one person will have the skills and ability to perform this task but mostly it will be a collaborative effort to understand and rewrite the code for more robust production ready purpose. \n",
+    "\n",
+    "As a team you can get to be good at this process but there is always a lag between the exploration being performed now and the ability to test that out in live environments. If the person writing the experimental approach was able, without switching hats to \"development mode\" to see their exploration validated safely by production users then this should be transformative for the impact of Data Science in your organisation. \n",
+    "\n",
+    "The discipline of Software Development offers many approaches to ensuring code is of high quality with consistent style and testable assertions on known data. Data Science and Machine Learning introduce new Software Development challenges that are not as well explored by the community. In Data Science behaviour is a more fundamental unit for testing than logic for instance so tests on real user data will show your model works as expected syntethic data is unlikely to achieve the same.\n",
+    "\n",
+    "Modern notebook environment have a common advantage in practice over many local development environments and that is that Data Scientists can write code against real data with all the quirks and anomolaies and underlying behaviour that they are actually trying to develop a solution against. We start by assuming only that there are high levels of uncertainty and that the code needs not only to work but to be well conditioned to real data. \n",
+    "\n",
+    "Scientists can benefit from:\n",
+    "* Structure\n",
+    "* Workflow portability\n",
+    "* Experimentation\n",
+    "* Persistence\n",
+    "* Trying more ideas\n",
+    "\n",
+    "Data Science teams can benefit from:\n",
+    "* Shorter production lead times\n",
+    "* Easier collaboration between anybody involved in turning research into production\n",
+    "* Knowing what is important from a deployment perspective within a notebook\n",
+    "* Knowing that research code still has a quality standard\n",
+    "\n",
+    "Sciflow 🔬 makes it easier to validate your research in production.\n",
+    "\n",
+    "*Note: Sciflow is built on top of the excellent `nbdev` library and wouldn't be possible without the creation of the literate programming environment made possible by that library.*"
    ]
   },
   {
@@ -66,11 +84,14 @@
    "source": [
     "## Steps\n",
     "\n",
-    "Steps are functions which can be executed independently. Structuring your code into steps brigns many benefits:\n",
+    "Steps are functions which can be executed independently. Structuring your code into steps brings many benefits:\n",
     "\n",
     "* Save Time:\n",
     "    * Checkpointing: can skip having to run expensive steps again\n",
-    "    * Re-use: write a step once and use in many different workflows"
+    "    * Re-use: write a step once and use in many different workflows\n",
+    "    \n",
+    "* Easier to debug\n",
+    "    * You can narrow down where the problem is happening quicker and can use print statements or a debugger within the fewlines of a functino rather than a longer script."
    ]
   },
   {
@@ -115,9 +136,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
