--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -41,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "import json\n",
+    "import os\n",
     "from functools import lru_cache\n",
     "from typing import Tuple\n",
     "\n",
@@ -57,7 +49,7 @@
     "from incense.experiment import Experiment\n",
     "from nbdev import Config\n",
     "from sciflow.experiment.lake_experiment import LakeExperiment\n",
-    "from sciflow.utils import odbc_connect, query_odbc\n",
+    "from sciflow.utils import odbc_connect, query\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
     "from turbodbc.exceptions import DatabaseError\n",
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +67,26 @@
     "class LakeExpLoader:\n",
     "    def __init__(\n",
     "        self,\n",
+    "        project,\n",
     "        experiment_name,\n",
     "        experiments_key_prefix=None,\n",
     "        connection=None,\n",
     "        bucket_name=None,\n",
     "        bucket_table_alias=None,\n",
     "    ):\n",
-    "        config = Config()\n",
-    "        lib_name = config.lib_name\n",
+    "        self.project = project\n",
     "        self.experiment_name = experiment_name\n",
     "        self.connection = odbc_connect() if connection is None else connection\n",
-    "        self.bucket_name = config.bucket if bucket_name is None else bucket_name\n",
+    "        self.bucket_name = (\n",
+    "            os.environ[\"SCIFLOW_BUCKET\"] if bucket_name is None else bucket_name\n",
+    "        )\n",
     "        self.bucket_table_alias = (\n",
-    "            config.bucket_table_alias\n",
+    "            os.environ[\"SCIFLOW_BUCKET_TABLE_ALIAS\"]\n",
     "            if bucket_table_alias is None\n",
     "            else bucket_table_alias\n",
     "        )\n",
     "        self.experiments_key_prefix = (\n",
-    "            f\"{lib_name}/experiments\"\n",
+    "            f\"{project}/experiments\"\n",
     "            if experiments_key_prefix is None\n",
     "            else experiments_key_prefix\n",
     "        )\n",
@@ -114,17 +108,17 @@
     "    ) -> Experiment:\n",
     "        if experiment_name is None:\n",
     "            experiment_name = self.experiment_name\n",
-    "        query = f\"select * from {self.table_context}.{experiment_name}.runs\"\n",
+    "        query_stmt = f\"select * from {self.table_context}.{experiment_name}.runs\"\n",
     "        if experiment_ids:\n",
     "            ids = \", \".join([str(i) for i in experiment_ids])\n",
-    "            query += f\" where dir0 IN ({ids})\"\n",
+    "            query_stmt += f\" where dir0 IN ({ids})\"\n",
     "        if experiment_id:\n",
-    "            query += f\" where dir0 = {experiment_id}\"\n",
+    "            query_stmt += f\" where dir0 = {experiment_id}\"\n",
     "        if order_by:\n",
-    "            query += f\" order by {order_by} desc\"\n",
+    "            query_stmt += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
-    "            query += f\" limit {limit}\"\n",
-    "        data = query_odbc(self.connection, query)\n",
+    "            query_stmt += f\" limit {limit}\"\n",
+    "        data = query(self.connection, query_stmt)\n",
     "        experiments = [\n",
     "            LakeExperiment(\n",
     "                self.bucket_name,\n",
@@ -198,6 +192,7 @@
     "\n",
     "    def __repr__(self):\n",
     "        return (\n",
+    "            f\"Project: {self.project}\\n\"\n",
     "            f\"Experiment: {self.experiment_name}\\n\"\n",
     "            f\"Remote Path: {self.remote_path}\\n\"\n",
     "            f\"Lake Table: {self.lake_table}\"\n",
@@ -206,36 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"  # default = bucket\n",
     "bucket_table_alias = \"chatbot_unpublish_s3\"\n",
     "experiments_key_prefix = \"discovery/experiments/test\"  # default = lib_name/experiments\n",
-    "experiment_name = \"lake_observer\"  # default should be flow name"
+    "experiment_name = \"lake_observer\"  # default should be flow name\n",
+    "lib_name = Config().lib_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ODBC_DRIVER /opt/dremio-odbc/lib64/libdrillodbc_sb64.so\n",
-      "ODBC_USER E02079\n",
-      "ODBC_PWD HYgzAG9ASxy1BBUa24jS4VVOL/wrJcyDAIKUdSPv4aD+7jFzvNUyoziBWeqKjg==\n",
-      "ODBC_PORT 31010\n",
-      "ODBC_HOST dremio-master-0.dremio-cluster-pod.default.svc.cluster.local\n",
-      "SSL_CERTS /etc/ssl/certs/ca-certificates.crt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = LakeExpLoader(\n",
+    "    project=lib_name,\n",
     "    experiment_name=experiment_name,\n",
     "    experiments_key_prefix=experiments_key_prefix,\n",
     "    bucket_name=bucket_name,\n",
@@ -245,18 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Project: sciflow\n",
        "Experiment: lake_observer\n",
        "Remote Path: s3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer\n",
        "Lake Table: chatbot_unpublish_s3.discovery.experiments.test.lake_observer"
       ]
      },
-     "execution_count": null,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,27 +267,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "missing_loader = LakeExpLoader(f\"generated_experiment_name_{np.random.randint(10**5)}\")"
+    "missing_loader = LakeExpLoader(\n",
+    "    lib_name, f\"generated_experiment_name_{np.random.randint(10**5)}\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Experiment: generated_experiment_name_69049\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_69049\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_69049"
+       "Project: sciflow\n",
+       "Experiment: generated_experiment_name_82958\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_82958\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_82958"
       ]
      },
-     "execution_count": null,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 9.54 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time assert len(loader.find_all()) == 5"
    ]
@@ -403,16 +382,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 336 ms, sys: 4 ms, total: 340 ms\n",
-      "Wall time: 1.82 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time assert len(loader.find_all()) == 5"
    ]
@@ -421,15 +391,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    assert len(loader.find_by_name(\"laketest\")) is None\n",
@@ -465,13 +427,6 @@
     "assert len(loader.find_by_key(\"experiment\", \"name\", \"test-lake-obs\")) == 5\n",
     "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -479,6 +434,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
