--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import json\n",
     "import os\n",
     "import os.path\n",
+    "import uuid\n",
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,17 +369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
-    "from sciflow.s3_utils import delete_dir\n",
-    "\n",
-    "s3 = boto3.resource(\"s3\")\n",
-    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_lake_obs\")\n",
-    "\n",
     "\n",
     "ex_name = \"test_lake_obs\"\n",
     "ex = Experiment(\"test_lake_obs\", interactive=True)\n",
@@ -396,7 +392,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    \"Hello %s!\" % recipient\n",
+    "    f\"Hello {recipient}!\"\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,16 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:test_lake_obs:Running command 'my_main'\n",
-      "INFO:test_lake_obs:Started\n",
-      "INFO:test_lake_obs:Completed after 0:00:01\n"
+      "INFO - test_lake_obs - Running command 'my_main'\n",
+      "INFO - test_lake_obs - Started\n",
+      "INFO - test_lake_obs - Completed after 0:00:01\n"
      ]
     },
     {
@@ -440,23 +436,21 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7ff8649277d0>"
+       "<sacred.run.Run at 0x7fbeb4bb5b50>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# slow\n",
-    "\n",
     "ex.run(meta_info={\"run_id\": sample_id})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,80 +478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex_name = \"test_empty\"\n",
-    "ex = Experiment(ex_name, interactive=True)\n",
+    "from sciflow.s3_utils import delete_dir\n",
     "\n",
-    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_empty\")\n",
-    "\n",
-    "obs = AWSLakeObserver(\n",
-    "    project,\n",
-    "    experiment_name=ex_name,\n",
-    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
-    "    experiments_key_prefix=experiments_key_prefix,\n",
-    ")\n",
-    "\n",
-    "ex.observers.append(obs)\n",
-    "\n",
-    "\n",
-    "@ex.config\n",
-    "def my_config():\n",
-    "    recipient = \"test\"\n",
-    "    \"Hello %s!\" % recipient\n",
-    "\n",
-    "\n",
-    "@ex.main\n",
-    "def my_main(message, _run: Run):\n",
-    "    print(message)"
+    "s3 = boto3.resource(\"s3\")\n",
+    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_lake_obs\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:test_empty:Running command 'my_main'\n",
-      "INFO:test_empty:Started\n",
-      "INFO:test_empty:Completed after 0:00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello test!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sacred.run.Run at 0x7ff857480fd0>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# slow\n",
-    "\n",
-    "ex.run(meta_info={\"run_id\": sample_id})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -565,6 +494,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
