--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -27,17 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Discovery with Top2Vec\n",
-    "\n",
-    "> top2vec is an unsupervised topic detection algorithm. It finds clusters of similar texts and then groups them into meaningful topics.\n",
-    "* Get Topics\n",
-    "* Get Words\n",
-    "* Get Docs\n",
-    "\n",
-    "# Look at:\n",
-    "\n",
-    "* https://github.com/fastai/fastdoc\n",
-    "* https://github.com/fastai/fastpages"
+    "# Example Usage: Unsupervised Modelling"
    ]
   },
   {
