--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -355,11 +355,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # TODO graphml export is not working - FIX\n",
+    "# # TODO fix graph exports - seems to be quite dependent on entworkx version.\n",
     "# nx.write_graphml_lxml(\n",
     "#   dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.graphml\")\n",
     "# )\n",
-    "nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
+    "# nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
    ]
   }
  ],
@@ -368,6 +368,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
