Fixed race condition in nb_test_nbs by adding pause

--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -48,11 +48,11 @@
     "from incense.artifact import CSVArtifact\n",
     "from incense.experiment import Experiment\n",
     "from nbdev import Config\n",
+    "from pandas.io.sql import DatabaseError\n",
     "from sciflow.experiment.lake_experiment import LakeExperiment\n",
     "from sciflow.utils import odbc_connect, query\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
-    "from turbodbc.exceptions import DatabaseError\n",
     "\n",
     "MAX_CACHE_SIZE = 32"
    ]
@@ -285,9 +285,9 @@
      "data": {
       "text/plain": [
        "Project: sciflow\n",
-       "Experiment: generated_experiment_name_82958\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_82958\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_82958"
+       "Experiment: generated_experiment_name_61662\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_61662\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_61662"
       ]
      },
      "execution_count": 10,
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,16 +362,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 9.06 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%time assert len(loader.find_all()) == 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,18 +389,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 252 ms, sys: 8 ms, total: 260 ms\n",
+      "Wall time: 1.29 s\n"
+     ]
+    }
+   ],
    "source": [
     "%time assert len(loader.find_all()) == 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table not found\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    assert len(loader.find_by_name(\"laketest\")) is None\n",
@@ -401,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
