--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -330,9 +330,8 @@
    "source": [
     "project = \"sciflow\"\n",
     "experiment_name = \"observer_test\"\n",
-    "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
-    "experiments_key_prefix = \"discovery/experiments/test/\"\n",
-    "missing_bucket = \"s3bawspprwe1\"\n",
+    "experiments_key_prefix = \"experiments/test/\"\n",
+    "missing_bucket = \"s3awsmissing\"\n",
     "invalid_bucket = \"some bucket\""
    ]
   },
@@ -342,13 +341,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"SCIFLOW_BUCKET\"] = bucket_name\n",
+    "from sciflow.utils import prepare_env\n",
+    "\n",
+    "prepare_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "observer = AWSLakeObserver(project, experiment_name)\n",
     "observer = AWSLakeObserver(\n",
     "    project, experiment_name, experiments_key_prefix=experiments_key_prefix\n",
     ")\n",
     "observer = AWSLakeObserver(\n",
-    "    project, experiment_name, bucket_name, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "    project,\n",
+    "    experiment_name,\n",
+    "    experiments_key_prefix=experiments_key_prefix,\n",
+    "    region=\"eu-west-1\",\n",
     ")\n",
     "assert observer.region == \"eu-west-1\"\n",
     "# Do not check for missing bucket yet\n",
@@ -369,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +394,7 @@
     "obs = AWSLakeObserver(\n",
     "    project,\n",
     "    experiment_name=ex_name,\n",
-    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
+    "    bucket_name=os.environ[\"SCIFLOW_BUCKET\"],\n",
     "    experiments_key_prefix=experiments_key_prefix,\n",
     ")\n",
     "\n",
@@ -392,7 +404,8 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    f\"Hello {recipient}!\"\n",
+    "    message = f\"Hello {recipient}!\"\n",
+    "    f\"{message}\"\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -405,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +436,7 @@
      "text": [
       "INFO - test_lake_obs - Running command 'my_main'\n",
       "INFO - test_lake_obs - Started\n",
-      "INFO - test_lake_obs - Completed after 0:00:01\n"
+      "INFO - test_lake_obs - Completed after 0:00:00\n"
      ]
     },
     {
@@ -436,10 +449,10 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fbeb4bb5b50>"
+       "<sacred.run.Run at 0x7f5410e8ab50>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,42 +463,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
-    "    \"s3bawspprwe1chatbotunpub01\",\n",
-    "    f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\",\n",
+    "    os.environ[\"SCIFLOW_BUCKET\"],\n",
+    "    f\"{experiments_key_prefix}test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
-    "    \"s3bawspprwe1chatbotunpub01\",\n",
-    "    f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\",\n",
+    "    os.environ[\"SCIFLOW_BUCKET\"],\n",
+    "    f\"{experiments_key_prefix}test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
-    "    \"s3bawspprwe1chatbotunpub01\",\n",
-    "    f\"discovery/experiments/test/test_lake_obs/metrics/{sample_id}/metrics.csv\",\n",
+    "    os.environ[\"SCIFLOW_BUCKET\"],\n",
+    "    f\"{experiments_key_prefix}test_lake_obs/metrics/{sample_id}/metrics.csv\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
-    "    \"s3bawspprwe1chatbotunpub01\",\n",
-    "    f\"discovery/experiments/test/test_lake_obs/runs/{sample_id}/run.json\",\n",
+    "    os.environ[\"SCIFLOW_BUCKET\"],\n",
+    "    f\"{experiments_key_prefix}test_lake_obs/runs/{sample_id}/run.json\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sciflow.s3_utils import delete_dir\n",
     "\n",
     "s3 = boto3.resource(\"s3\")\n",
-    "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_lake_obs\")"
+    "delete_dir(s3, os.environ[\"SCIFLOW_BUCKET\"], f\"{experiments_key_prefix}test_lake_obs\")"
    ]
   }
  ],
