--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -473,7 +473,12 @@
     "        existing_lines = profile_file.readlines()\n",
     "        to_remove = []\n",
     "        for i, line in enumerate(existing_lines):\n",
-    "            if line.strip().startswith(\"export ARTIFACTORY_\"):\n",
+    "            if (\n",
+    "                line.strip().startswith(\"export ARTIFACTORY_\")\n",
+    "                or line.strip().startswith(\"export LIB_NAME\")\n",
+    "                or line.strip().startswith(\"export VERSION\")\n",
+    "                or line.strip().startswith(\"export BUILD_NUMBER\")\n",
+    "            ):\n",
     "                to_remove.append(i)\n",
     "            if not line.endswith(\"\\n\"):\n",
     "                existing_lines[i] = line + \"\\n\"\n",
@@ -511,7 +516,7 @@
        " 'export ARTIFACTORY_URL=ndartifactory.jfrog.io\\n',\n",
        " 'export ARTIFACTORY_CONDA_CHANNEL=conda-local\\n',\n",
        " 'export LIB_NAME=sciflow\\n',\n",
-       " 'export VERSION=0.0.4\\n',\n",
+       " 'export VERSION=0.0.1\\n',\n",
        " 'export BUILD_NUMBER=0\\n']"
       ]
      },
@@ -613,6 +618,13 @@
    "source": [
     "assert \"conda-local\" == os.environ[\"ARTIFACTORY_CONDA_CHANNEL\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
