--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -29,10 +29,11 @@
     "from pathlib import Path\n",
     "\n",
     "import nbdev\n",
+    "import pandas as pd\n",
+    "import pyodbc\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.clean import nbdev_clean_nbs\n",
-    "from nbqa.find_root import find_project_root\n",
-    "from turbodbc import Megabytes, connect, make_options"
+    "from nbqa.find_root import find_project_root"
    ]
   },
   {
@@ -139,23 +140,38 @@
     "# export\n",
     "\n",
     "\n",
-    "def odbc_connect(options=None, env_file_path: str = None):\n",
+    "def odbc_connect(env_file_path: str = None):\n",
     "    required_vars = (\"ODBC_DRIVER\", \"ODBC_HOST\", \"ODBC_PORT\", \"ODBC_USER\", \"ODBC_PWD\")\n",
     "    if not all([v in os.environ for v in required_vars]):\n",
     "        prepare_env(env_file_path)\n",
-    "    if options is None:\n",
-    "        options = make_options(\n",
-    "            fetch_wchar_as_char=True, autocommit=True, read_buffer_size=Megabytes(5),\n",
-    "        )\n",
-    "    connection = connect(\n",
-    "        driver=os.environ[\"ODBC_DRIVER\"],\n",
-    "        host=os.environ[\"ODBC_HOST\"],\n",
-    "        port=os.environ[\"ODBC_PORT\"],\n",
-    "        uid=os.environ[\"ODBC_USER\"],\n",
-    "        pwd=os.environ[\"ODBC_PWD\"],\n",
-    "        SSL=1,\n",
-    "        TrustedCerts=os.environ[\"SSL_CERTS\"],\n",
-    "        turbodbc_options=options,\n",
+    "    #     connection = connect(\n",
+    "    #         driver=os.environ[\"ODBC_DRIVER\"],\n",
+    "    #         host=os.environ[\"ODBC_HOST\"],\n",
+    "    #         port=os.environ[\"ODBC_PORT\"],\n",
+    "    #         uid=os.environ[\"ODBC_USER\"],\n",
+    "    #         pwd=os.environ[\"ODBC_PWD\"],\n",
+    "    #         SSL=1,\n",
+    "    #         TrustedCerts=os.environ[\"SSL_CERTS\"],\n",
+    "    #         turbodbc_options=options,\n",
+    "    #     )\n",
+    "    connection = pyodbc.connect(\n",
+    "        \"\"\"Driver={}; \n",
+    "                                                   ConnectionType=Direct;\n",
+    "                                                   HOST={};\n",
+    "                                                   PORT={};\n",
+    "                                                   AuthenticationType=Plain;\n",
+    "                                                   UID={};\n",
+    "                                                   PWD={};\n",
+    "                                                   SSL=1;\n",
+    "                                                   TrustedCerts={}\"\"\".format(\n",
+    "            os.environ[\"ODBC_DRIVER\"],\n",
+    "            os.environ[\"ODBC_HOST\"],\n",
+    "            os.environ[\"ODBC_PORT\"],\n",
+    "            os.environ[\"ODBC_USER\"],\n",
+    "            os.environ[\"ODBC_PWD\"],\n",
+    "            os.environ[\"SSL_CERTS\"],\n",
+    "        ),\n",
+    "        autocommit=True,\n",
     "    )\n",
     "    return connection"
    ]
@@ -169,20 +185,9 @@
     "# export\n",
     "\n",
     "\n",
-    "def query(\n",
-    "    conn,\n",
-    "    sql,\n",
-    "    strings_as_dictionary=False,\n",
-    "    adaptive_integers=False,\n",
-    "    strings_to_categorical=False,\n",
-    "    date_as_object=False,\n",
-    "):\n",
+    "def query(conn, sql):\n",
     "    with conn.cursor() as cursor:\n",
-    "        df = (\n",
-    "            cursor.execute(sql)\n",
-    "            .fetchallarrow(strings_as_dictionary=False, adaptive_integers=False,)\n",
-    "            .to_pandas(strings_to_categorical=False, date_as_object=False,)\n",
-    "        )\n",
+    "        df = pd.read_sql(sql, conn)\n",
     "    return df"
    ]
   },
@@ -213,13 +218,12 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 16 ms, sys: 8 ms, total: 24 ms\n",
-      "Wall time: 343 ms\n"
+      "Wall time: 308 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "import turbodbc\n",
     "\n",
     "conn = odbc_connect()"
    ]
@@ -233,14 +237,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8 ms, sys: 4 ms, total: 12 ms\n",
-      "Wall time: 289 ms\n"
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 127 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "assert type(conn) == turbodbc.connection.Connection\n",
+    "assert type(conn) == pyodbc.Connection\n",
     "assert query(conn, \"SELECT 1 AS test_col\")[\"test_col\"].iloc[0] == 1"
    ]
   },
